--- a/resume.css
+++ b/resume.css
@@ -1,10 +1,18 @@
- .parallax {
+body {
+	font: 15px Georgia, Sans-Serif;
+	width: 100wh;
+	height: 90vh;
+	color: #fff;
+	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+	background-size: 400% 400%;
+	-webkit-animation: Gradient 15s ease infinite;
+	-moz-animation: Gradient 15s ease infinite;
+	animation: Gradient 15s ease infinite;
+}
+
+.parallax {
             background-image: url("");
-
-           
             height: 175%;
-
-           
             background-attachment: fixed;
             background-position: center;
             background-repeat: no-repeat;
