--- a/style.css
+++ b/style.css
@@ -1,1 +1,13 @@
+ @-webkit-keyframes Gradient {
+            0% {
+                background-position: 0% 50%
+            }
 
+            50% {
+                background-position: 100% 50%
+            }
+
+            100% {
+                background-position: 0% 50%
+            }
+        }
