--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
- @-webkit-keyframes Gradient {
+body{
+@-webkit-keyframes Gradient {
             0% {
                 background-position: 0% 50%
             }
@@ -11,3 +12,4 @@
                 background-position: 0% 50%
             }
         }
+}
