--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
-body{
-              -webkit-animation: Gradient 15s ease infinite;
+ body {
+            background: linear-gradient(-20deg, rgb(253, 165, 138), rgb(253, 96, 156), rgb(35, 196, 255), rgb(45, 253, 205));
+            background-size: 400% 400%;
+            -webkit-animation: Gradient 15s ease infinite;
             -moz-animation: Gradient 15s ease infinite;
             animation: Gradient 15s ease infinite;
-}
-@-webkit-keyframes Gradient {
+            align-content: center;
+        }
+
+        @-webkit-keyframes Gradient {
             0% {
                 background-position: 0% 50%
             }
@@ -17,3 +21,10 @@ body{
             }
         }
 
+        #pic {
+            max-width: 80px;
+            float: right;
+            margin: 20px;
+            transform: rotate(10deg);
+            box-shadow: 0px 0px 10px #555555;
+        }
