--- a/style.css
+++ b/style.css
@@ -26,5 +26,5 @@
             float: right;
             margin: 20px;
             transform: rotate(10deg);
-           
+            box-shadow: darkblue;
         }
