--- a/style.css
+++ b/style.css
@@ -22,9 +22,9 @@
         }
 
         #pic {
-            max-width: 80px;
+            max-width: 30px;
             float: right;
             margin: 20px;
             transform: rotate(10deg);
-            box-shadow: darkblue;
+            box-shadow: darkblue: 35px;
         }
