--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
- #body {
+ body {
+
             background: linear-gradient(-20deg, rgb(253, 165, 138), rgb(253, 96, 156), rgb(35, 196, 255), rgb(45, 253, 205));
             background-size: 400% 400%;
             -webkit-animation: Gradient 15s ease infinite;
