--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
  body {
-
+             font: 15px Georgia, Sans-Serif;
+            	width: 100wh;
+	            height: 90vh;
+	            color: #fff;
             background: linear-gradient(-20deg, rgb(253, 165, 138), rgb(253, 96, 156), rgb(35, 196, 255), rgb(45, 253, 205));
             background-size: 400% 400%;
             -webkit-animation: Gradient 15s ease infinite;
@@ -20,6 +23,29 @@
             100% {
                 background-position: 0% 50%
             }
+}
+         @-moz-keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@keyframes Gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
         }
 
         #pic {
