--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
- body {
+#content{
+	text-align:center;
+}
+body {
              font: 15px Georgia, Sans-Serif;
-            	width: 100wh;
-	            height: 90vh;
-	            color: #fff;
-            background: linear-gradient(-20deg, rgb(253, 165, 138), rgb(253, 96, 156), rgb(35, 196, 255), rgb(45, 253, 205));
-            background-size: 400% 400%;
+             width: 100wh;
+	     height: 90vh;
+	     color: #fff;
+             background: linear-gradient(-20deg, rgb(253, 165, 138), rgb(253, 96, 156), rgb(35, 196, 255), rgb(45, 253, 205));
+             background-size: 400% 400%;
             -webkit-animation: Gradient 15s ease infinite;
             -moz-animation: Gradient 15s ease infinite;
             animation: Gradient 15s ease infinite;
