--- a/style.css
+++ b/style.css
@@ -14,3 +14,8 @@ body {
             transform: rotate(10deg);
 	    box-shadow: 0px 0px 10px #555555;	
         }
+
+	#container{
+	    width: 800px;
+  	    margin: 40px auto 60px;
+}
