--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@ body{
    max-height: 20px;
     transform: rotate(10deg); 
 }
-#content{
-    text-align: center;
+#container{
+   	width: 800px;
+	margin: 40px auto 60px;
 }
 
 #name {
