--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body{
   background-image: url(blueCode.jpg);
   background-color: darkblue;
   color:white;
+  width: 100wh;
+  height: 90vh;
+  background-size: 400% 400%;
 
 }
 
