--- a/style.css
+++ b/style.css
@@ -14,9 +14,10 @@ body{
     transform: rotate(10deg); 
 }
 #container{
-   	width: 800px;
-	margin: 40px auto 60px;
-	float: center;
+   	
+	margin: 0 0 16px 0;
+	padding: 0 0 32px 0;
+
 }
 
 #name {
