--- a/style.css
+++ b/style.css
@@ -4,8 +4,11 @@ body{
   color:white;
 }
 
+#container{
+    margin: 0 0 16px 0;
+    padding: 0 0 32px 0;
 
-
+}
 
 #name {
     padding-left: 405px;
