--- a/style.css
+++ b/style.css
@@ -1,15 +1,30 @@
+
+h1{
+    border: 2px solid rgb(247, 149, 2);
+    text-shadow: 2px 2px #582c0287;
+    background-color: rgba(245, 162, 59, 0.509);
+    color:white;
+}
+
 body{
-  background-image: url(blueCode.jpg);
-  background-color: darkblue;
-  color:white;
+    background: linear-gradient(to bottom, #f3c175 0%, #f77647cd 100%);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    padding-left: 40px;
+    padding-right: 20px;
+    color: #250202f1;
+    font-size: 20px;
+    padding-bottom: 100px;
+    padding-top: 100px;
+    padding-left: 150px;
+    padding-right: 150px;
 }
 
-#container{
-    margin: 0 0 16px 0;
-    padding: 0 0 32px 0;
+img {
+    border: 5px solid rgb(92, 4, 4);
+    margin: 35px;
+   }
 
-}
+   .subheader{
+       font-style: italic;
+   }
 
-#name {
-    padding-left: 405px;
-}
